--- a/prjects web d/project1.html
+++ b/prjects web d/project1.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
         body{
-            background: url('img1.jpg');
+            /* background: url('img1.jpg'); */
             margin:0px;
             padding:0px;
             box-sizing: border-box;
